feat: add loading animation for coming soon
This provides users with clear messaging that the feature is on the way but not quite ready yet.

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,9 +102,32 @@
                 <div class="overlay d-md-none" id="overlay"></div>
                 <!-- Main Content Area -->
                 <section id="main_content" class="p-0 m-4 m-md-2 min-vh-100">
-                    <!-- Checking Templates  -->
-                    <h1 class="text-center arvo">Hey!</h1>
-                    <h1 class="text-center arvo">We are cooking it up...</h1>
+                    <!-- Card -->
+                    <section class="card card_box_shadow border_white m-3 h-75 bg">
+                        <div class="card-body d-flex justify-content-center flex-column text_d_blue py-5">
+                            <!-- Coming Soon  -->
+                            <h1 class="text-center arvo">Hey!</h1>
+                            <h1 class="text-center arvo">We are cooking it up...</h1>
+                            <div class="loader my-5">
+                                <div class="circle">
+                                    <div class="dot"></div>
+                                    <div class="outline"></div>
+                                </div>
+                                <div class="circle">
+                                    <div class="dot"></div>
+                                    <div class="outline"></div>
+                                </div>
+                                <div class="circle">
+                                    <div class="dot"></div>
+                                    <div class="outline"></div>
+                                </div>
+                                <div class="circle">
+                                    <div class="dot"></div>
+                                    <div class="outline"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </section>
                 {% else %}
                 <!-- Side Nav bar -->
