--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -87,6 +87,22 @@ body {
     font-size: 1.2rem;
 }
 
+.font_size_big{
+    font-size: 3rem;
+}
+
+@media screen and (max-width: 500px) {
+    .font_size_big{
+        font-size: 1.5rem !important;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .font_size_big{
+        font-size: 2rem;
+    }
+}
+
 /* Customizing Bootstrap */
 
 .nav-link{
@@ -166,6 +182,37 @@ body {
         cursor: pointer;
     }
 }
+
+/* HomePage */
+
+.calendar_svg {
+    width: 40%;
+}
+
+.benefit_svg {
+    width: 40%;
+}
+
+@media screen and (max-width: 767px) {
+    .calendar_svg {
+        width: 85%;
+    }
+
+    .benefit_svg {
+        width: 100% !important;
+    }
+}
+@media only screen and (min-width: 2000px) {
+    .calendar_svg {
+        width: 30%;
+    }
+
+    .benefit_svg {
+        width: 25%;
+    }
+}
+
+
 
 /* Main Content */
 
