--- a/templates/index.html
+++ b/templates/index.html
@@ -101,9 +101,148 @@
                 <!-- Overlay Effect -->
                 <div class="overlay d-md-none" id="overlay"></div>
                 <!-- Main Content Area -->
-                <section id="main_content" class="p-0 m-4 m-md-2 min-vh-100">
-                    <!-- Card -->
-                    <section class="card card_box_shadow border_white m-3 h-75 bg">
+                <section id="main_content" class="p-0 m-4 m-md-2">
+                    <!-- Hero Section -->
+                    <section class="d-flex flex-md-row flex-column justify-content-center align-items-center mx-0">
+                        <div class="col">
+                            <h1 class="text-md-right text-center arvo font_size_big">Track Student Attendance with Ease</h1>
+                            <h6 class="text-center text-muted">The easy way for schools and universities to manage student attendance records and schedules.</h6>
+                        </div>
+                        <!-- SVG Calendar -->
+                        <div class="calendar_svg">
+                            <img class="img-fluid my-4" width="100%" src="{% static 'svg/month_calendar.svg' %}" alt="Attendance Month Calendar " />
+                        </div>
+                    </section>
+                    <!-- Features -->
+                    <section class="container-fluid px-0">
+                        <h1 class="arvo mx-md-5">Key Features</h1>
+                        <p class="mx-md-5">---need to fill----</p>
+                        <!-- feature row 1 -->
+                        <section class="row justify-content-center mb-md-4 mx-auto mx-md-0">
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-0 mr-md-4">
+                                <div class="card-body text_d_blue py-5 py-md-5 vh-25">
+                                    <!-- Icon -->
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bi bi-calendar3" role="img" xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
+                                        <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"></path>
+                                        <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"></path>
+                                    </svg>
+                                    <h3 class="pt-3">Automated Timetable</h3>
+                                    <p class="mb-0">Intelligently generate timetables for classes based on your schedule requirements and room availability. Customize period names, sizes and more.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-0 ml-md-4">
+                                <div class="card-body text_d_blue py-5 py-md-5 vh-25">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="ballot-check" role="img" xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" viewBox="0 0 448 512" class="mr-2">
+                                        <path
+                                            fill="currentColor"
+                                            d="M112 432h32c17.7 0 32-14.4 32-32v-32c0-17.6-14.3-32-32-32h-32c-17.7 0-32 14.4-32 32v32c0 17.6 14.3 32 32 32zm0-64h32v32h-32v-32zm0-192h32c17.7 0 32-14.4 32-32v-32c0-17.6-14.3-32-32-32h-32c-17.7 0-32 14.4-32 32v32c0 17.6 14.3 32 32 32zm0-64h32v32h-32v-32zM416 0H32C14.3 0 0 14.4 0 32v448c0 17.6 14.3 32 32 32h384c17.7 0 32-14.4 32-32V32c0-17.6-14.3-32-32-32zm0 480H32V32h384v448zM216 144h128c4.4 0 8-3.6 8-8v-16c0-4.4-3.6-8-8-8H216c-4.4 0-8 3.6-8 8v16c0 4.4 3.6 8 8 8zm0 128h128c4.4 0 8-3.6 8-8v-16c0-4.4-3.6-8-8-8H216c-4.4 0-8 3.6-8 8v16c0 4.4 3.6 8 8 8zm0 128h128c4.4 0 8-3.6 8-8v-16c0-4.4-3.6-8-8-8H216c-4.4 0-8 3.6-8 8v16c0 4.4 3.6 8 8 8zm-97.4-113.6c2.1 2.1 5.5 2.1 7.6 0l64.2-63.6c2.1-2.1 2.1-5.5 0-7.6l-12.6-12.7c-2.1-2.1-5.5-2.1-7.6 0l-47.6 47.2-20.6-20.9c-2.1-2.1-5.5-2.1-7.6 0l-12.7 12.6c-2.1 2.1-2.1 5.5 0 7.6l36.9 37.4z"
+                                        ></path>
+                                    </svg>
+                                    <h3 class="pt-3">Attendance Tracking</h3>
+                                    <p class="mb-0">Record daily student attendance digitally via CSV import or manual entry for each class. Timestamps provide verification.</p>
+                                </div>
+                            </div>
+                        </section>
+                        <!-- feature row 2 -->
+                        <section class="row justify-content-center mb-md-4 mx-auto mx-md-0">
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-0 mr-md-4">
+                                <div class="card-body text_d_blue py-5 py-md-5 vh-25">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="currentColor" class="bi bi-bar-chart-line" viewBox="0 0 16 16">
+                                        <path d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1zm1 12h2V2h-2zm-3 0V7H7v7zm-5 0v-3H2v3z" />
+                                    </svg>
+                                    <h3 class="pt-3">Data Analytics</h3>
+                                    <p class="mb-0">Visualize attendance statistics through interactive charts by date range, student, class or school-wide. Gain insights into absenteeism.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-0 ml-md-4">
+                                <div class="card-body text_d_blue py-5 py-md-5 vh-25">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="currentColor" class="bi bi-person-lock" viewBox="0 0 16 16">
+                                        <path d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m0 5.996V14H3s-1 0-1-1 1-4 6-4c.564 0 1.077.038 1.544.107a4.524 4.524 0 0 0-.803.918A10.46 10.46 0 0 0 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664zM9 13a1 1 0 0 1 1-1v-1a2 2 0 1 1 4 0v1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1zm3-3a1 1 0 0 0-1 1v1h2v-1a1 1 0 0 0-1-1" />
+                                    </svg>
+                                    <h3 class="pt-3">Access Controls</h3>
+                                    <p class="mb-0">Manage role-based access for teachers, administrators, students. Restrict permissions to guarantee privacy and compliance.</p>
+                                </div>
+                            </div>
+                        </section>
+                        <!-- feature row 3 -->
+                        <section class="row justify-content-center mb-md-4 mx-auto mx-md-0">
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-0 mr-md-4">
+                                <div class="card-body text_d_blue py-5 py-md-5 vh-25">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="currentColor" class="bi bi-sliders2" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd" d="M10.5 1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4H1.5a.5.5 0 0 1 0-1H10V1.5a.5.5 0 0 1 .5-.5M12 3.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m-6.5 2A.5.5 0 0 1 6 6v1.5h8.5a.5.5 0 0 1 0 1H6V10a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5M1 8a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2A.5.5 0 0 1 1 8m9.5 2a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V13H1.5a.5.5 0 0 1 0-1H10v-1.5a.5.5 0 0 1 .5-.5m1.5 2.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5" />
+                                    </svg>
+                                    <h3 class="pt-3">Custom Settings</h3>
+                                    <p class="mb-0">Administrators can configure absence thresholds, class names, hours per day and other rules. Fine-tune to your policies.</p>
+                                </div>
+                            </div>
+                        </section>
+                    </section>
+                    <!-- Benefits -->
+                    <section class="container-fluid px-0 my-5">
+                        <h1 class="text-center arvo mx-md-5">Benefits</h1>
+                        <p class="text-center mx-md-5">---need to fill----</p>
+                        <!-- Teachers & Faculty -->
+                        <section class="row justify-content-center align-items-center mb-md-4 mx-md-0">
+                            <div class="card col-10 flex-md-row card_box_shadow border_white my-4 my-md-0 mr-md-4">
+                                <div class="card-body text_d_blue pt-3 pb-0 py-md-5 pl-0 vh-25">
+                                    <h3 class="text-center text-md-left pt-3 pt-md-0">Teachers and Faculty</h3>
+                                    <ul class="pl-4 pl-md-5">
+                                        <li>Save 4+ hours per week on manual attendance with digital tracking</li>
+                                        <li>Get instant visibility into student absenteeism with analytical dashboards</li>
+                                        <li>Download detailed attendance reports in PDF or CSV format</li>
+                                        <li>Ensure accuracy of records with student verification</li>
+                                    </ul>
+                                </div>
+                                <img class="img-fluid benefit_svg mb-4 my-md-4" src="{% static 'svg/professor-illustration.svg' %}" alt="" />
+                            </div>
+                        </section>
+                        <!-- School Administrators -->
+                        <section class="row justify-content-center align-items-center mb-md-4 mx-md-0">
+                            <div class="card col-10 flex-md-row card_box_shadow border_white my-4 my-md-0 mr-md-4">
+                                <img class="img-fluid mt-4 my-md-4 benefit_svg" src="{% static 'svg/cloud-computing.svg' %}" alt="" />
+                                <div class="card-body text_d_blue py-3 py-md-5 pl-0 vh-25">
+                                    <h3 class="text-center text-md-left">School Administrators</h3>
+                                    <ul class="">
+                                        <li>School/university-wide visibility into attendance metrics</li>
+                                        <li>Easily configure an unlimited number of classes and rooms</li>
+                                        <li>Add and manage teachers or staff accounts</li>
+                                        <li>Customize absence thresholds for notifications</li>
+                                        <li>Guarantee privacy compliance with role-based permissions</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </section>
+                        <!-- Students & Parents -->
+                        <section class="row justify-content-center align-items-center mb-md-4 mx-md-0">
+                            <div class="card col-10 flex-md-row card_box_shadow border_white my-4 my-md-0 mr-md-4">
+                                <div class="card-body text_d_blue pt-3 pb-0 py-md-5 pl-0 vh-25">
+                                    <h3 class="text-center text-md-left pt-3 pt-md-0">Students and Parents</h3>
+                                    <ul class="pl-4 pl-md-5">
+                                        <li>Students can view personal attendance digitally</li>
+                                        <li>Automated notifications for unverified absences by SMS and email</li>
+                                        <li>Raise attendance discrepancies with a verification system</li>
+                                        <li>Parent portal to also track student attendance</li>
+                                    </ul>
+                                </div>
+                                <img class="img-fluid benefit_svg mb-4 my-md-4" src="{% static 'svg/social-update.svg' %}" alt="" />
+                            </div>
+                        </section>
+                    </section>
+                    <!-- Content Breaking Line -->
+                    <section class="container-fluid my-5">
+                        <div class="px-xl-8 px-md-7">
+                            <hr class="mt-7 text-1000 border_color_white" />
+                        </div>
+                    </section>
+
+                    <!-- Dummy Image -->
+                    <section class="d-none">
+                        <div class="col-9 text-center">
+                            <img class="img-fluid rounded my-3" src="https://dummyimage.com/1000x600/062743/daeaf6&text=Image1" alt="..." />
+                        </div>
+                    </section>
+                    <!-- Coming Soon Card -->
+                    <section class="d-none card card_box_shadow border_white m-3 h-75 bg">
                         <div class="card-body d-flex justify-content-center flex-column text_d_blue py-5">
                             <!-- Coming Soon  -->
                             <h1 class="text-center arvo">Hey!</h1>
