feat: add testimonials section to homepage
- Created Testimonial component to display quote
- Generated 4 example testimonials with attributed quotes
- Added corresponding image, name and position for each

--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -193,6 +193,21 @@ body {
     width: 40%;
 }
 
+.icon-holder {
+    position: absolute;
+    left: 50%;
+    top: -18px;
+    margin-left: -18px;
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    background: #062743;
+    color: #daeaf6;
+    text-align: center;
+    border-radius: 50%;
+    padding-top: 11px;
+}
+
 @media screen and (max-width: 767px) {
     .calendar_svg {
         width: 85%;
