--- a/templates/index.html
+++ b/templates/index.html
@@ -228,13 +228,108 @@
                             </div>
                         </section>
                     </section>
+                    <!-- Testimonials -->
+                    <section class="container-fluid px-0">
+                        <h1 class="arvo mx-md-5">Testimonials</h1>
+                        <p class="mx-md-5">---need to fill----</p>
+                        <!-- testimonials -->
+                        <section class="row justify-content-center mb-md-4 mx-auto mx-md-0">
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 ml-md-4">
+                                <!-- Quote Symbol -->
+                                <div class="icon-holder">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-right" role="img" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 448 512">
+                                        <path fill="currentColor" d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z"></path>
+                                    </svg>
+                                </div>
+                                <!-- Testimony -->
+                                <div class="card-body text_d_blue pt-5 pb-0">
+                                    <blockquote>“We went from tracking attendance using paper sheets to having beautiful graphical reports for the entire school with a click of a button. It has made managing our student attendance incredibly smooth.”</blockquote>
+                                </div>
+                                <!-- Name & Positions -->
+                                <div class="modal-footer border_color_white">
+                                    <div class="col-12 col-md-auto text-center text-md-start p-0">
+                                        <img src="{% static 'img/JamieScott.jpg' %}" width="50" class="rounded-circle" alt="image" />
+                                    </div>
+                                    <div class="col text-md-left text-center">
+                                        <div class="arvo">Jamie Scott</div>
+                                        <div class="font-italic">High School Principal</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 ml-md-4">
+                                <!-- Quote Symbol -->
+                                <div class="icon-holder">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-right" role="img" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 448 512">
+                                        <path fill="currentColor" d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z"></path>
+                                    </svg>
+                                </div>
+                                <!-- Testimony -->
+                                <div class="card-body text_d_blue pt-5 pb-0">
+                                    <blockquote>“The automatic timetables and insightful attendance analytics have been an absolute game changer. We can now easily identify student absenteeism patterns.”</blockquote>
+                                </div>
+                                <!-- Name & Positions -->
+                                <div class="modal-footer border_color_white">
+                                    <div class="col-12 col-md-auto text-center text-md-start p-0">
+                                        <img src="{% static 'img/AlexThomas.jpg' %}" width="50" class="rounded-circle" alt="image" />
+                                    </div>
+                                    <div class="col text-md-left text-center">
+                                        <div class="arvo">Alex Thomas</div>
+                                        <div class="font-italic">University Dean</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 ml-md-4">
+                                <!-- Quote Symbol -->
+                                <div class="icon-holder">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-right" role="img" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 448 512">
+                                        <path fill="currentColor" d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z"></path>
+                                    </svg>
+                                </div>
+                                <!-- Testimony -->
+                                <div class="card-body text_d_blue pt-5 pb-0">
+                                    <blockquote>“The ability to handle attendance digitally has given our teachers back 4 hours per week previously spent on manual work. We are now using this time for more meaningful student interactions.”</blockquote>
+                                </div>
+                                <!-- Name & Positions -->
+                                <div class="modal-footer border_color_white">
+                                    <div class="col-12 col-md-auto text-center text-md-start p-0">
+                                        <img src="{% static 'img/JessicaWong.jpg' %}" width="50" class="rounded-circle" alt="image" />
+                                    </div>
+                                    <div class="col text-md-left text-center">
+                                        <div class="arvo">Jessica Wong</div>
+                                        <div class="font-italic">STEM Teacher</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 ml-md-4">
+                                <!-- Quote Symbol -->
+                                <div class="icon-holder">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-right" role="img" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 448 512">
+                                        <path fill="currentColor" d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z"></path>
+                                    </svg>
+                                </div>
+                                <!-- Testimony -->
+                                <div class="card-body text_d_blue pt-5 pb-0">
+                                    <blockquote>“As a parent, I love being able to log in and instantly view my children's attendance record from home. The notifications for missed classes are also very proactive.”</blockquote>
+                                </div>
+                                <!-- Name & Positions -->
+                                <div class="modal-footer border_color_white">
+                                    <div class="col-12 col-md-auto text-center text-md-start p-0">
+                                        <img src="{% static 'img/DavidKim.jpg' %}" width="50" class="rounded-circle" alt="image" />
+                                    </div>
+                                    <div class="col text-md-left text-center">
+                                        <div class="arvo">David Kim</div>
+                                        <div class="font-italic">Parent at Pinecrest Elementary</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </section>
                     <!-- Content Breaking Line -->
-                    <section class="container-fluid my-5">
+                    <section class="container-fluid my-5 d-none">
                         <div class="px-xl-8 px-md-7">
                             <hr class="mt-7 text-1000 border_color_white" />
                         </div>
                     </section>
-
                     <!-- Dummy Image -->
                     <section class="d-none">
                         <div class="col-9 text-center">
