homepage accessibility improvement
- Now all images have descriptive alt text for accessibility.
- For links like "#" you may want to add a rel="noreferrer" for security.
- All SVGs have role="img" now

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,8 +58,8 @@
                             <!-- Sidebar close button for mobile -->
                             <li class="list-group-item bg_d_blue border-0">
                                 <span id="left_side_bar_close" class="float-right">
-                                    <a href="#" class="text_l_bluish_white">
-                                        <svg width="1.3em" height="1.3em" viewBox="0 0 320 512" class="bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <a href="#" class="text_l_bluish_white" rel="noreferrer">
+                                        <svg role="img" width="1.3em" height="1.3em" viewBox="0 0 320 512" class="bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                             <path fill="currentColor" d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"></path>
                                         </svg>
                                     </a>
@@ -86,7 +86,7 @@
                             </a>
                         </li>
                         <li class="list-group mb-3">
-                            <a href="#" class="side_bar_link fill_d_blue">
+                            <a href="#" class="side_bar_link fill_d_blue" rel="noreferrer">
                                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="users" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="1.2em" height="1.2em" class="mr-2">
                                     <path
                                         fill="currentColor"
@@ -147,7 +147,7 @@
                         <section class="row justify-content-center mb-md-4 mx-auto mx-md-0">
                             <div class="col-md-5 card card_box_shadow border_white my-4 my-md-0 mr-md-4">
                                 <div class="card-body text_d_blue py-5 py-md-5 vh-25">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="currentColor" class="bi bi-bar-chart-line" viewBox="0 0 16 16">
+                                    <svg xmlns="http://www.w3.org/2000/svg" role="img" width="3em" height="3em" fill="currentColor" class="bi bi-bar-chart-line" viewBox="0 0 16 16">
                                         <path d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1zm1 12h2V2h-2zm-3 0V7H7v7zm-5 0v-3H2v3z" />
                                     </svg>
                                     <h3 class="pt-3">Data Analytics</h3>
@@ -156,7 +156,7 @@
                             </div>
                             <div class="col-md-5 card card_box_shadow border_white my-4 my-md-0 ml-md-4">
                                 <div class="card-body text_d_blue py-5 py-md-5 vh-25">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="currentColor" class="bi bi-person-lock" viewBox="0 0 16 16">
+                                    <svg xmlns="http://www.w3.org/2000/svg" role="img" width="3em" height="3em" fill="currentColor" class="bi bi-person-lock" viewBox="0 0 16 16">
                                         <path d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m0 5.996V14H3s-1 0-1-1 1-4 6-4c.564 0 1.077.038 1.544.107a4.524 4.524 0 0 0-.803.918A10.46 10.46 0 0 0 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664zM9 13a1 1 0 0 1 1-1v-1a2 2 0 1 1 4 0v1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1zm3-3a1 1 0 0 0-1 1v1h2v-1a1 1 0 0 0-1-1" />
                                     </svg>
                                     <h3 class="pt-3">Access Controls</h3>
@@ -168,7 +168,7 @@
                         <section class="row justify-content-center mb-md-4 mx-auto mx-md-0">
                             <div class="col-md-5 card card_box_shadow border_white my-4 my-md-0 mr-md-4">
                                 <div class="card-body text_d_blue py-5 py-md-5 vh-25">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="3em" height="3em" fill="currentColor" class="bi bi-sliders2" viewBox="0 0 16 16">
+                                    <svg xmlns="http://www.w3.org/2000/svg" role="img" width="3em" height="3em" fill="currentColor" class="bi bi-sliders2" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M10.5 1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4H1.5a.5.5 0 0 1 0-1H10V1.5a.5.5 0 0 1 .5-.5M12 3.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m-6.5 2A.5.5 0 0 1 6 6v1.5h8.5a.5.5 0 0 1 0 1H6V10a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5M1 8a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2A.5.5 0 0 1 1 8m9.5 2a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V13H1.5a.5.5 0 0 1 0-1H10v-1.5a.5.5 0 0 1 .5-.5m1.5 2.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5" />
                                     </svg>
                                     <h3 class="pt-3">Custom Settings</h3>
@@ -193,13 +193,13 @@
                                         <li>Ensure accuracy of records with student verification</li>
                                     </ul>
                                 </div>
-                                <img class="img-fluid benefit_svg mb-4 my-md-4" src="{% static 'svg/professor-illustration.svg' %}" alt="" />
+                                <img class="img-fluid benefit_svg mb-4 my-md-4" src="{% static 'svg/professor-illustration.svg' %}" alt="An illustrated professor passionately teaching at a whiteboard, engaging with students in a dynamic educational setting." />
                             </div>
                         </section>
                         <!-- School Administrators -->
                         <section class="row justify-content-center align-items-center mb-md-4 mx-md-0">
                             <div class="card col-10 flex-md-row card_box_shadow border_white my-4 my-md-0 mr-md-4">
-                                <img class="img-fluid mt-4 my-md-4 benefit_svg" src="{% static 'svg/cloud-computing.svg' %}" alt="" />
+                                <img class="img-fluid mt-4 my-md-4 benefit_svg" src="{% static 'svg/cloud-computing.svg' %}" alt="An depicting school administrators collaborating and managing administrative tasks in an educational setting." />
                                 <div class="card-body text_d_blue py-3 py-md-5 pl-0 vh-25">
                                     <h3 class="text-center text-md-left">School Administrators</h3>
                                     <ul class="">
@@ -224,7 +224,7 @@
                                         <li>Parent portal to also track student attendance</li>
                                     </ul>
                                 </div>
-                                <img class="img-fluid benefit_svg mb-4 my-md-4" src="{% static 'svg/social-update.svg' %}" alt="" />
+                                <img class="img-fluid benefit_svg mb-4 my-md-4" src="{% static 'svg/social-update.svg' %}" alt="Visual of digital attendance tracking for students, featuring automated absence notifications via SMS and email. Parent portal allows monitoring and verification of student attendance." />
                             </div>
                         </section>
                     </section>
@@ -248,7 +248,7 @@
                                 <!-- Name & Positions -->
                                 <div class="modal-footer border_color_white">
                                     <div class="col-12 col-md-auto text-center text-md-start p-0">
-                                        <img src="{% static 'img/JamieScott.jpg' %}" width="50" class="rounded-circle" alt="image" />
+                                        <img src="{% static 'img/JamieScott.jpg' %}" width="50" class="rounded-circle" alt="Image of Jamie Scott" />
                                     </div>
                                     <div class="col text-md-left text-center">
                                         <div class="arvo">Jamie Scott</div>
@@ -270,7 +270,7 @@
                                 <!-- Name & Positions -->
                                 <div class="modal-footer border_color_white">
                                     <div class="col-12 col-md-auto text-center text-md-start p-0">
-                                        <img src="{% static 'img/AlexThomas.jpg' %}" width="50" class="rounded-circle" alt="image" />
+                                        <img src="{% static 'img/AlexThomas.jpg' %}" width="50" class="rounded-circle" alt="Image of Alex Thomas" />
                                     </div>
                                     <div class="col text-md-left text-center">
                                         <div class="arvo">Alex Thomas</div>
@@ -292,7 +292,7 @@
                                 <!-- Name & Positions -->
                                 <div class="modal-footer border_color_white">
                                     <div class="col-12 col-md-auto text-center text-md-start p-0">
-                                        <img src="{% static 'img/JessicaWong.jpg' %}" width="50" class="rounded-circle" alt="image" />
+                                        <img src="{% static 'img/JessicaWong.jpg' %}" width="50" class="rounded-circle" alt="Image of Jessica Wong" />
                                     </div>
                                     <div class="col text-md-left text-center">
                                         <div class="arvo">Jessica Wong</div>
@@ -314,7 +314,7 @@
                                 <!-- Name & Positions -->
                                 <div class="modal-footer border_color_white">
                                     <div class="col-12 col-md-auto text-center text-md-start p-0">
-                                        <img src="{% static 'img/DavidKim.jpg' %}" width="50" class="rounded-circle" alt="image" />
+                                        <img src="{% static 'img/DavidKim.jpg' %}" width="50" class="rounded-circle" alt="Image of David Kim" />
                                     </div>
                                     <div class="col text-md-left text-center">
                                         <div class="arvo">David Kim</div>
@@ -373,8 +373,8 @@
                             <!-- Sidebar close button for mobile -->
                             <li class="list-group-item bg_d_blue border-0">
                                 <span id="left_side_bar_close" class="float-right">
-                                    <a href="#" class="text_l_bluish_white">
-                                        <svg width="1.3em" height="1.3em" viewBox="0 0 320 512" class="bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <a href="#" class="text_l_bluish_white" rel="noreferrer">
+                                        <svg role="img" width="1.3em" height="1.3em" viewBox="0 0 320 512" class="bi bi-x" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                             <path fill="currentColor" d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"></path>
                                         </svg>
                                     </a>
@@ -413,7 +413,7 @@
                         </li>
                         <li class="list-group">
                             <a href="{% url 'my_account' %}" class="side_bar_link fill_d_blue">
-                                <svg width="1.3em" height="1.3em" viewBox="0 0 16 16" class="mr-2" xmlns="http://www.w3.org/2000/svg">
+                                <svg role="img" width="1.3em" height="1.3em" viewBox="0 0 16 16" class="mr-2" xmlns="http://www.w3.org/2000/svg">
                                     <g>
                                         <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z" />
                                         <path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
@@ -426,7 +426,7 @@
                         <li class="list-group">
                             <a href="{% url 'dashboard:view' %}" class="side_bar_link fill_d_blue">
                                 <!-- dashboard logo 1 -->
-                                <svg width="1.3em" height="1.3em" viewBox="0 0 16 16" class="mr-2 d-" xmlns="http://www.w3.org/2000/svg">
+                                <svg role="img" width="1.3em" height="1.3em" viewBox="0 0 16 16" class="mr-2 d-" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M11 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1v-3a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3h1V7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7h1V2z" />
                                 </svg>
                                 Dashboard
@@ -455,7 +455,7 @@
                             </a>
                         </li>
                         <li class="list-group">
-                            <a href="#" class="side_bar_link fill_d_blue">
+                            <a href="#" class="side_bar_link fill_d_blue" rel="noreferrer">
                                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="book-open" role="img" xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 576 512" class="mr-2">
                                     <path fill="currentColor" d="M542.22 32.05c-54.8 3.11-163.72 14.43-230.96 55.59-4.64 2.84-7.27 7.89-7.27 13.17v363.87c0 11.55 12.63 18.85 23.28 13.49 69.18-34.82 169.23-44.32 218.7-46.92 16.89-.89 30.02-14.43 30.02-30.66V62.75c.01-17.71-15.35-31.74-33.77-30.7zM264.73 87.64C197.5 46.48 88.58 35.17 33.78 32.05 15.36 31.01 0 45.04 0 62.75V400.6c0 16.24 13.13 29.78 30.02 30.66 49.49 2.6 149.59 12.11 218.77 46.95 10.62 5.35 23.21-1.94 23.21-13.46V100.63c0-5.29-2.62-10.14-7.27-12.99z"></path>
                                 </svg>
@@ -463,7 +463,7 @@
                             </a>
                         </li>
                         <li class="list-group">
-                            <a href="#" class="side_bar_link fill_d_blue">
+                            <a href="#" class="side_bar_link fill_d_blue" rel="noreferrer">
                                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user-graduate" role="img" xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" viewBox="0 0 448 512" class="fa-user-graduate mr-2">
                                     <path
                                         fill="currentColor"
@@ -485,7 +485,7 @@
                             </a>
                         </li>
                         <li class="list-group mb-3">
-                            <a href="#" class="side_bar_link fill_d_blue">
+                            <a href="#" class="side_bar_link fill_d_blue" rel="noreferrer">
                                 <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="users" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="1.2em" height="1.2em" class="mr-2">
                                     <path
                                         fill="currentColor"
