--- a/templates/index.html
+++ b/templates/index.html
@@ -234,7 +234,7 @@
                         <p class="mx-md-5">---need to fill----</p>
                         <!-- testimonials -->
                         <section class="row justify-content-center mb-md-4 mx-auto mx-md-0">
-                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 ml-md-4">
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 mx-md-4">
                                 <!-- Quote Symbol -->
                                 <div class="icon-holder">
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-right" role="img" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 448 512">
@@ -256,7 +256,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 ml-md-4">
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 mx-md-4">
                                 <!-- Quote Symbol -->
                                 <div class="icon-holder">
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-right" role="img" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 448 512">
@@ -278,7 +278,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 ml-md-4">
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 mx-md-4">
                                 <!-- Quote Symbol -->
                                 <div class="icon-holder">
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-right" role="img" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 448 512">
@@ -300,7 +300,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 ml-md-4">
+                            <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 mx-md-4">
                                 <!-- Quote Symbol -->
                                 <div class="icon-holder">
                                     <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="quote-right" role="img" xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 448 512">
@@ -403,14 +403,6 @@
                         </div>
                         <!-- All View -->
                         <li class="side_bar_title list-group mt-md-3">Navigation</li>
-                        <li class="list-group">
-                            <a href="{% url 'homepage' %}" class="side_bar_link fill_d_blue">
-                                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="home" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="1.2em" height="1.2em" class="mr-2">
-                                    <path fill="currentColor" d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z"></path>
-                                </svg>
-                                Home
-                            </a>
-                        </li>
                         <li class="list-group">
                             <a href="{% url 'my_account' %}" class="side_bar_link fill_d_blue">
                                 <svg role="img" width="1.3em" height="1.3em" viewBox="0 0 16 16" class="mr-2" xmlns="http://www.w3.org/2000/svg">
