--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
                     <section class="d-flex flex-md-row flex-column justify-content-center align-items-center mx-0">
                         <div class="col">
                             <h1 class="text-md-right text-center arvo font_size_big">Track Student Attendance with Ease</h1>
-                            <h6 class="text-center text-muted">The easy way for schools and universities to manage student attendance records and schedules.</h6>
+                            <h6 class="text-center text-muted">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.</h6>
                         </div>
                         <!-- SVG Calendar -->
                         <div class="calendar_svg">
@@ -116,7 +116,7 @@
                     <!-- Features -->
                     <section class="container-fluid px-0">
                         <h1 class="arvo mx-md-5">Key Features</h1>
-                        <p class="mx-md-5">---need to fill----</p>
+                        <p class="mx-md-5">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.</p>
                         <!-- feature row 1 -->
                         <section class="row justify-content-center mb-md-4 mx-auto mx-md-0">
                             <div class="col-md-5 card card_box_shadow border_white my-4 my-md-0 mr-md-4">
@@ -180,13 +180,13 @@
                     <!-- Benefits -->
                     <section class="container-fluid px-0 my-5">
                         <h1 class="text-center arvo mx-md-5">Benefits</h1>
-                        <p class="text-center mx-md-5">---need to fill----</p>
+                        <p class="text-center mx-md-5">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.</p>
                         <!-- Teachers & Faculty -->
-                        <section class="row justify-content-center align-items-center mb-md-4 mx-md-0">
-                            <div class="card col-10 flex-md-row card_box_shadow border_white my-4 my-md-0 mr-md-4">
-                                <div class="card-body text_d_blue pt-3 pb-0 py-md-5 pl-0 vh-25">
-                                    <h3 class="text-center text-md-left pt-3 pt-md-0">Teachers and Faculty</h3>
-                                    <ul class="pl-4 pl-md-5">
+                        <section class="row justify-content-center align-items-center mx-1 mb-md-4 mx-md-0">
+                            <div class="card col-md-8 flex-md-row align-items-center card_box_shadow border_white my-3 my-md-0 mr-md-4">
+                                <div class="card-body text_d_blue pt-3 pb-0 py-md-4 pl-0 vh-25">
+                                    <h3 class="text-center text-md-left pl-md-3 pt-3 pt-md-0">Teachers and Faculty</h3>
+                                    <ul class="list-style-square pl-4 pl-md-5">
                                         <li>Save 4+ hours per week on manual attendance with digital tracking</li>
                                         <li>Get instant visibility into student absenteeism with analytical dashboards</li>
                                         <li>Download detailed attendance reports in PDF or CSV format</li>
@@ -197,12 +197,12 @@
                             </div>
                         </section>
                         <!-- School Administrators -->
-                        <section class="row justify-content-center align-items-center mb-md-4 mx-md-0">
-                            <div class="card col-10 flex-md-row card_box_shadow border_white my-4 my-md-0 mr-md-4">
+                        <section class="row justify-content-center align-items-center mx-1 mb-md-4 mx-md-0">
+                            <div class="card col-md-8 flex-md-row align-items-center card_box_shadow border_white my-3 my-md-0 mr-md-4">
                                 <img class="img-fluid mt-4 my-md-4 benefit_svg" src="{% static 'svg/cloud-computing.svg' %}" alt="An depicting school administrators collaborating and managing administrative tasks in an educational setting." />
-                                <div class="card-body text_d_blue py-3 py-md-5 pl-0 vh-25">
-                                    <h3 class="text-center text-md-left">School Administrators</h3>
-                                    <ul class="">
+                                <div class="card-body text_d_blue py-3 py-md-4 pl-0 vh-25">
+                                    <h3 class="text-center text-md-left pl-md-3">School Administrators</h3>
+                                    <ul class="list-style-square">
                                         <li>School/university-wide visibility into attendance metrics</li>
                                         <li>Easily configure an unlimited number of classes and rooms</li>
                                         <li>Add and manage teachers or staff accounts</li>
@@ -213,11 +213,11 @@
                             </div>
                         </section>
                         <!-- Students & Parents -->
-                        <section class="row justify-content-center align-items-center mb-md-4 mx-md-0">
-                            <div class="card col-10 flex-md-row card_box_shadow border_white my-4 my-md-0 mr-md-4">
-                                <div class="card-body text_d_blue pt-3 pb-0 py-md-5 pl-0 vh-25">
-                                    <h3 class="text-center text-md-left pt-3 pt-md-0">Students and Parents</h3>
-                                    <ul class="pl-4 pl-md-5">
+                        <section class="row justify-content-center align-items-center mx-1 mb-md-4 mx-md-0">
+                            <div class="card col-md-8 flex-md-row align-items-center card_box_shadow border_white my-3 my-md-0 mr-md-4">
+                                <div class="card-body text_d_blue pt-3 pb-0 py-md-4 pl-0 vh-25">
+                                    <h3 class="text-center text-md-left pl-md-3 pt-3 pt-md-0">Students and Parents</h3>
+                                    <ul class="list-style-square pl-4 pl-md-5">
                                         <li>Students can view personal attendance digitally</li>
                                         <li>Automated notifications for unverified absences by SMS and email</li>
                                         <li>Raise attendance discrepancies with a verification system</li>
@@ -231,7 +231,7 @@
                     <!-- Testimonials -->
                     <section class="container-fluid px-0">
                         <h1 class="arvo mx-md-5">Testimonials</h1>
-                        <p class="mx-md-5">---need to fill----</p>
+                        <p class="mx-md-5">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.</p>
                         <!-- testimonials -->
                         <section class="row justify-content-center mb-md-4 mx-auto mx-md-0">
                             <div class="col-md-5 card card_box_shadow border_white my-4 my-md-3 mx-md-4">
